--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 25px;
 }
 
 .App-logo {
@@ -35,4 +36,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.data-table {
+  box-shadow: 0 1px 8px -1px rgba(0, 0, 0, 0.2);
+  margin-top: 8px;
 }
